finished moving cards between columns

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,30 @@
-.App {
+.Board {
+  display: flex; 
+}
+
+.column-wrapper {
+  flex-grow: 1;
+}
+
+.Column {
+  padding: 25px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.column-wrapper:nth-child(4n + 1) .Title {
+  background-color: #8E6E95; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.column-wrapper:nth-child(4n + 2) .Title {
+  background-color: goldenrod; 
 }
 
-.App-link {
-  color: #61dafb;
+.column-wrapper:nth-child(4n + 3) .Title {
+  background-color: dodgerblue; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.column-wrapper:nth-child(4n + 4) .Title {
+  background-color: tomato; 
 }
+
+
